fix: remove redundant text-align property in CSS

--- a/master.css
+++ b/master.css
@@ -36,7 +36,7 @@
 .container .content{
     background-color: chartreuse;
     height: 100vh;
-    text-align:center ;
+    text-align: ;
     align-items: center;
     text-align: center;
 }
